--- a/popup.css
+++ b/popup.css
@@ -3,15 +3,16 @@
   box-sizing: border-box;
 }
 
-html, body {
-  font-family: 'Single Day', sans-serif;
+html,
+body {
+  font-family: "Single Day", sans-serif;
   font-size: 18px;
   margin: 0;
   min-height: 180px;
   padding: 0;
   width: 384px;
 }
-  
+
 /* Remove margins and padding from the list */
 ul {
   margin: 0;
@@ -45,14 +46,14 @@ ul li:hover {
 
 /* When clicked on, add a background color and strike out text */
 ul li.checked {
-  background: #84B686;
+  background: #84b686;
   color: #fff;
   text-decoration: line-through;
 }
 
 /* Add a "checked" mark when clicked on */
 ul li.checked::before {
-  content: '';
+  content: "";
   position: absolute;
   border-color: #fff;
   border-style: solid;
@@ -107,26 +108,26 @@ input {
   padding: 10px;
   float: left;
   font-size: 18px;
-  color: #FFFFFF;
-  background-color: #84B686;
-  font-family: 'Single Day', sans-serif;
+  color: #ffffff;
+  background-color: #84b686;
+  font-family: "Single Day", sans-serif;
 }
 
 /* Style the input placeholder */
 ::placeholder {
-  color: #FFFFFF;
+  color: #f1ffe9e3;
 }
 
 /* Style the input border when focused */
 input:focus {
   outline: none !important;
-  border: 2px solid #FFFFFF;
+  border: 2px solid #ffffff;
 }
 
 /* "To Do List" text at the top */
 header {
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #346636;
   font-size: 30px;
 }
@@ -138,5 +139,5 @@ footer {
   font-size: 11px;
   padding: 3px;
   background-color: #346636;
-  color: #FFFFFF;
+  color: #ffffff;
 }
